opacity background with full text

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -52,8 +52,9 @@ body {
 .container {
     padding-top: 30px;
     padding-bottom: 30px;
-    opacity: .6;
-    background-color: black;
+    // opacity: .6;
+    // background-color: black;
+    background-color:rgba(0,0,0,0.5);
 }
 
 
