--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
-<div class="main">
+
+
+<div class="jumbotron">
   <div class="container" >
     <h1>JPL Citation Discovery</h1>
     <p>“The voyage of discovery is not in seeking new landscapes but in having new eyes."-Proust</p>
