--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -14,23 +14,38 @@ html, body {
 }
 
 body {
-  background-image: image-url("bg20.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-image: image-url("bg20.jpeg");
+  // background-repeat: no-repeat;
+  // background-size: cover;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+.jumbotron{
+  background-image: image-url("img20.jpg");
+  font-family: 'Source Sans Pro', sans-serif;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
 .container {
-  margin: 0 auto;
-  width: 960px;
+  // margin: 0 auto;
+  // width: 960px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-shadow: 3px 3px 4px #000000;
+  color: white;
+  // opacity: .6;
+  // background-color: black;
+  // background-color:rgba(0,0,0,0.5);
 }
 
 /* Main */
 .main {
-  color: #fff;
-  position: relative;
-  top: 100px;
-  text-align: center;
+  // color: #fff;
+  // position: relative;
+  // top: 100px;
+  // text-align: center;
 }
 
 .main h1 {
@@ -48,15 +63,6 @@ body {
   font-size: 30px;
   text-shadow: 3px 3px 4px #000000;
 }
-
-.container {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    // opacity: .6;
-    // background-color: black;
-    background-color:rgba(0,0,0,0.5);
-}
-
 
 @media screen and (max-width: 800px) {
     body {
