pushing for cool

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,3 +7,17 @@
     <h2>Xiaohan, Yinyi, Shu, Brian, Rex</h2>
   </div>
 </div>
+
+<div class="row" >
+  <!-- <nav> -->
+     <div class="nav-wrapper col s6 offset-s4">
+       <form>
+         <div class="input-field">
+           <input id="search" type="search" required>
+           <label for="search"><i class="material-icons"></i></label>
+           <i class="material-icons">x</i>
+         </div>
+       </form>
+     </div>
+   <!-- </nav> -->
+ </div>
