search bar customized

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,15 +9,15 @@
 </div>
 
 <div class="row" >
-  <!-- <nav> -->
-     <div class="nav-wrapper col s6 offset-s4">
+  <nav class="blue darken-1 col m3 offset-m4">
+     <div class="nav-wrapper ">
        <form>
          <div class="input-field">
            <input id="search" type="search" required>
-           <label for="search"><i class="material-icons"></i></label>
+           <label for="search"><i class="material-icons"></i>Search for a title</label>
            <i class="material-icons">x</i>
          </div>
        </form>
      </div>
-   <!-- </nav> -->
+   </nav>
  </div>
