--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,15 +9,20 @@
 </div>
 
 <div class="row" >
-  <nav class="blue darken-1 col m3 offset-m4">
+  <nav class="blue darken-1 col m4 offset-m4">
      <div class="nav-wrapper ">
        <form>
          <div class="input-field">
            <input id="search" type="search" required>
            <label for="search"><i class="material-icons"></i>Search for a title</label>
-           <i class="material-icons">x</i>
+           <i class="material-icons"></i>
          </div>
        </form>
+       <br>
      </div>
    </nav>
+ </div>
+ 
+ <div class="row">
+   <a class="blue darken-1 waves-effect waves-light btn-large col m1 offset-m7">Search</a>
  </div>
