--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,7 +3,8 @@
      <a href="#!" class="brand-logo" href="<%= root_url %>"></a>
      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
      <ul class="left hide-on-med-and-down">
-       <li><a href="about.html">About</a></li>
+       <li><%= link_to "Home", root_path%></li>
+       <!-- <li><a href="about.html">About</a></li> -->
        <!-- <li><a href="badges.html">Components</a></li>
        <li><a href="collapsible.html">Javascript</a></li>
        <li><a href="mobile.html">Mobile</a></li> -->
