--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,6 +25,6 @@
 
 <div class="row">
    <div class="blue darken-1 waves-effect waves-light btn-large col m1 offset-m7" style="color:white">
-     <a class="" ><%= link_to "Search", results_path%></a>
+     <a class="" ><%= link_to "Search", load_path%></a>
    </div>
  </div>
